@@ -1733,13 +1733,36 @@ These options influence LaTeX output. See further :doc:`latex`.
      ``'geometry'``
         "geometry" package inclusion, the default definition is:
 
-          ``'\\usepackage[margin=1in,marginparwidth=0.5in]{geometry}'``.
+          ``'\\usepackage{geometry}'`` (with ``[dvipdfm]`` for Japanese documents)
+
+        and :file:`sphinx.sty` executes a ``\PassOptionsToPackages`` with
+        ``hmargin=1in,vmargin=1in,marginparwidth=0.5in``. See :doc:`latex`
+        for the corresponding ``'sphinxsetup'`` options.
 
         .. versionadded:: 1.5
 
         .. versionchanged:: 1.5.2
-           For Japanese documents also ``dvipdfm`` option is passed to
-           ``geometry``.
+           ``dvipdfm`` option if :confval:`latex_engine` is ``'platex'``.
+
+        .. versionadded:: 1.5.3
+           The ``'sphinxsetup'`` margin keys. See :doc:`latex`.
+
+        .. versionchanged:: 1.5.3
+           The key is executed after the  ``\sphinxsetup`` which follows
+           immediately the loading of :file:`sphinx.sty`. This is in order
+           to handle the paper layout options in a special way for Japanese
+           documents: the text width will be set to an integer multiple of the
+           *zenkaku* width, and the text height to an integer multiple
+           of the baseline.
+
+           Further, as the ``jsbook`` Japanese standard document class handles
+           pointsize other than ``10pt`` in a special manner, Sphinx uses then
+           as first document class option ``truedimen``: this will be received
+           by ``geometry`` package and help it interpret correctly further
+           class options such as ``letterpaper`` or ``a4paper``.
+
+           For ``jreport`` (Japanese ``'howto'`` documents), the situation is
+           otherwise, and the ``truedimen`` must not be used for ``geometry``.
 
      ``'babel'``
         "babel" package inclusion, default ``'\\usepackage{babel}'`` (the
