@@ -20,6 +20,9 @@ Bugs fixed
 * #3364: sphinx-quickstart prompts overflow on Console with 80 chars width
 * since 1.5, PDF's TOC and bookmarks lack an entry for general Index
   (refs: #3383)
+* #3356: Page layout for Japanese ``'manual'`` docclass has a shorter text area
+* #3394: When ``'pointsize'`` is not ``10pt``, Japanese ``'manual'`` document
+  gets wrong PDF page dimensions
 
 Testing
 --------
